# MemoFlow

./: .env.example  .gitignore  README.md  pyproject.toml
docs/superpowers/specs/: 2026-07-08-model-download-progress-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  knowledge.ts  meetings.ts  summaries.ts  system.ts  transcripts.ts  types.ts
frontend/src/components/: BackendStatus.css  BackendStatus.tsx  KnowledgeSearch.css  KnowledgeSearch.tsx  Layout.css  Layout.tsx  MeetingList.css  MeetingList.tsx  Panel.css  ProcessingProgress.css  ProcessingProgress.tsx  SummaryView.tsx  TranscriptView.tsx  UploadForm.css  UploadForm.tsx
frontend/src/lib/: apiError.ts  status.ts  time.ts
frontend/src/pages/: DashboardPage.css  DashboardPage.tsx  MeetingDetailPage.css  MeetingDetailPage.tsx  SettingsPage.css  SettingsPage.tsx
scripts/: download_asr_model.sh  download_hf_model.py  download_mlx_moss.sh  download_modelscope_model.py  download_vibevoice_asr.sh  smoke_test.sh  start_with_cloudflare_tunnel.sh
src/memoflow/: __init__.py  config.py  container.py  main.py
src/memoflow/application/: dto.py  knowledge_service.py  meeting_service.py  summary_service.py  system_service.py  transcription_service.py
src/memoflow/application/pipeline/: processing_pipeline.py  runner.py
src/memoflow/application/ports/: asr_port.py  diarization_port.py  embedding_port.py  file_storage_port.py  llm_port.py  pipeline_runner.py  rerank_port.py  unit_of_work.py
src/memoflow/domain/knowledge/: entities.py  repository.py  value_objects.py
src/memoflow/domain/meeting/: entities.py  events.py  repository.py  services.py  value_objects.py
src/memoflow/domain/shared/: entity.py  events.py  exceptions.py  value_objects.py
src/memoflow/domain/summary/: entities.py  repository.py  value_objects.py
src/memoflow/domain/transcript/: entities.py  repository.py  services.py  value_objects.py
src/memoflow/infrastructure/ai/: asr_defaults.py  asr_factory.py  asr_model_sources.py  asr_status.py  deepseek_llm.py  embedding_model.py  modelscope_download.py  moss_hf_asr.py  moss_mlx_asr.py  moss_transcript.py  openai_embedding.py  progress.py  pyannote_diarization.py  qwen_mlx_llm.py  qwen_reranker.py  sensevoice_asr.py  vibevoice_asr.py
src/memoflow/infrastructure/audio/: ffmpeg.py
tests/integration/: test_meeting_pipeline.py
tests/unit/: test_asr_backend_switch.py
tests/unit/application/: test_processing_pipeline_errors.py
tests/unit/domain/: test_meeting.py  test_transcript_assembly.py
tests/unit/infrastructure/: test_asr_defaults.py  test_asr_model_sources.py  test_asr_status.py  test_deepseek_llm.py  test_lancedb_dimension.py  test_moss_hf_asr.py  test_moss_transcript.py  test_runtime_preferences.py
tests/unit/interfaces/: test_upload_stream.py
tests/unit/scripts/: test_download_modelscope_model.py
(+24 files in other folders)
