[project]
name = "memoflow"
version = "0.1.0"
description = "AI 会议助手 —— VibeVoice 本地转写 + DeepSeek/OpenAI/Qwen3 API 摘要与检索（FastAPI + React）"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # --- Web ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # --- Persistence ---
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "lancedb>=0.9.0",
    "pyarrow>=16.0.0",

    # --- AI / ML (adapters lazily import these, see infrastructure/ai) ---
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "transformers>=4.50.0",
    "torch>=2.0.0",
    "soundfile>=0.12.1",
    "librosa>=0.10.2",

    # --- Misc ---
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memoflow"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
